# openai-agents-python

./: ."git grep -n -- '*.py' "from agents."  .dockerignore  .env.example  .env.sample  .gitignore  .gitmodules  AGENTS.md  BUG_FIXES.md  CALDERO.md  CLAUDE.md  CLAUDE_DECISIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  ISSUE_RESOLUTION_README.md  LICENSE  Makefile  NeuroLynk.bot.IA  README-docker.md  README-venv.md  README.md  Readme.md  SECURITY.md  The moon dev  agent_server.py  agents.md  agents_onboarding.py  check_version.py  debug_llm_tool_calls.py  debug_to_call_args.py  debug_tool_schema.py  demo.txt  dev_appserver.py  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  firecrawl_agent.py  guideline_for_developers.html  mkdocs.yml  (+20 more)
.claude/: AGENTS-MCP-POLICY.md  ORG-GOVERNANCE.md  PROJECT-SETUP.md  settings.local.json
.claude/flags/: auto-interop.json
.codex/hooks/: stop_repo_tidy.py
.cursor/rules/: dev-rule.mdc
.github/: Agent solathan file  FUNDING.yml
.github/scripts/: pr_labels.py  run-asyncio-teardown-stability.sh
.github/workflows/: YOU_ARE_COMPROMISED.txt  agentmd.yml  docs.yml  generator-generic-ossf-slsa3-publish.yml  main.yml  pr-labels.yml  publish.yml  pylint.yml  python-app.yml  release-pr-update.yml  release-pr.yml  release-tag.yml  solc - npm.webloc  tests.yml  trickle-eval.yml  update-docs.yml
.run/: Run Dev.run.xml
.windsurf/rules/: dev-guide.md
agents/: pyproject.toml
agents/executive_assistant/: __init__.py  memory.py  rag.py  tools.py
app/: README.md  __init__.py  main.py  package.json  tsconfig.json
app/app/: layout.tsx  page.tsx
app/components/: CampaignCard.tsx  Header.tsx  Stepper.tsx
app/config/: logging_config.json
app/models/: weather.py
app/routers/: weather_agent.py
app/styles/: README.md
backend/: README.md  pyproject.toml
backend/tests/: test_main.py
data/: airtable_appIQpYvYVDlVtAPS_schema.json  airtable_appIQpYvYVDlVtAPS_schema.txt  airtable_bases.json  my chat1.txt
docs/: a2a.md  agent_server.md  agents.md  azure_integration.md  background.md  banking-demo.md  bidirectional_handoffs.md  config.md  connectors.md  context.md  examples.md  guardrails.md  handoffs.md  human_in_the_loop.md  index.md  llms-full.txt  mcp.md  models.md  multi_agent.md  ollama_integration.md  optimizers.md  quickstart.md  release.md  repl.md  results.md  routing_with_session.md  running_agents.md  sandbox_agents.md  sessions.md  streaming.md  structured_agent_audits.md  tools.md  tracing.md  usage.md  visualization.md  workflows.md
docs/cn/: agents.md  mcp.md  tools.md  tracing.md  visualization.md
docs/ja/: agents.md  config.md  context.md  examples.md  guardrails.md  handoffs.md  index.md  mcp.md  multi_agent.md  optimizers.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  sessions.md  streaming.md  tools.md  tracing.md  usage.md  visualization.md  (+1 more)
examples/: agentbase_shared_memory.md  behavioral_validation.py  bidirectional_handoffs.py  citation_verification_loop.py  config.py  dynamic_context_injection.py  logicnodes_tools.py  mcp_http_error_handling_demo.py  multi_step_tool_chain.py  open_responses_built_in_tools.py  run_examples.py  streaming_lifecycle_events.py  structured_output_validation_loop.py
examples/example-with-ui/context/: README.md  app.py  pyproject.toml
examples/pid_to_dexpi/: README.md  pyproject.toml  requirements.txt
examples/pid_to_dexpi/src/pid2dexpi/: __init__.py  cli.py  config.py  dexpi_exporter.py  dxf_reader.py  graph_builder.py  pid_model.py
examples/pid_to_dexpi/tests/: __init__.py  test_config.py  test_dexpi_exporter.py  test_graph_builder.py  test_pid_model.py
examples_2/: main.py  pyproject.toml
forestry_app/: .env.example  .gitignore  Dockerfile  README.md  railway.toml
frontend/: README.md  package.json
learn_docs/: financial_research_agent_summary.md
models/: index.html
practice/: pyproject.toml
refinery_agents/: __init__.py  config.py  context.py  main.py  work_order_schema.py
requirements_bot/: README.md  __init__.py  api_handler.py  config.py  html_exporter.py  main.py  manager.py  printer.py  requirements.txt
scratch/: fix_run_loop.py
search/: search_index.json
spike/: 1_caldero_hello.py  2_caldero_memory_session.py  3_caldero_full_wiring.py  4_caldero_live_run.py  5_caldero_batch_capabilities.py  6_caldero_duckdb_adapter.py
test_repo/: .env.example  start.sh
tests/: README.md  README_REDIS_TESTS.md  conftest.py  fake_model.py  test_a2a_client_tool.py  test_a2a_converter.py  test_a2a_server_executor.py  test_agent_as_tool.py  test_agent_as_tool_max_turns.py  test_agent_card_builder.py  test_agent_clone_shallow_copy.py  test_agent_config.py  test_agent_hooks.py  test_agent_instructions_signature.py  test_agent_llm_hooks.py  test_agent_memory.py  test_agent_memory_leak.py  test_agent_name.py  test_agent_name_validation.py  test_agent_prompt.py  test_agent_run.py  test_agent_runner.py  test_agent_runner_streamed.py  test_agent_runner_sync.py  test_agent_tool_input.py  test_agent_tool_state.py  test_agent_tracing.py  test_agent_utility.py  test_anthropic_thinking_blocks.py  test_apply_diff.py  test_apply_diff_helpers.py  test_apply_patch_tool.py  test_async_sqlite_session.py  test_attach_usage_to_span_slots.py  test_auto_handoff_back.py  test_bidirectional_handoffs.py  test_build_generated_items_details.py  test_call_model_input_filter.py  test_call_model_input_filter_unit.py  test_cancel_streaming.py  (+161 more)
(+1203 files in other folders)
