[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pid2dexpi"
version = "0.1.0"
description = "Convert refinery P&ID drawings (DXF) to DEXPI XML and graph representations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Refinery Engineering Team"}
]
keywords = ["P&ID", "DEXPI", "DXF", "CAD", "process engineering", "graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ezdxf>=1.1.0",
    "networkx>=3.2",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
pid2dexpi = "pid2dexpi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
